# python-tcxparser

./: .coveragerc  .pre-commit-config.yaml  .python-version  .travis.yml  AUTHORS.rst  AUTHORS.txt  CHANGES.rst  CHANGES.txt  LICENSE  LICENSE.txt  README.md  README.rst  README.txt  dev-requirements.txt  maintain.sh  pyproject.toml  setup.cfg  setup.py  tcx.py  tcxparser.py  test_tcx.py  test_tcxparser.py  test_tcxparser_cycling.py  tox.ini
.github/workflows/: release.yml  test.yml
tcxparser/: __init__.py  exceptions.py  tcxparser.py
tests/: test_cycling.py  test_standup_paddleboarding.py  test_tcxparser.py
tests/files/: no_hr.tcx  sup_activity_1.tcx  test.tcx
